--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 </body>
 <!-- tailwind css CDN -->
-<script src="https://cdn.tailwindcss.com"></script>
+<!-- <script src="https://cdn.tailwindcss.com"></script> -->
 <!-- react and reactDOM CDN -->
 <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
@@ -22,4 +22,5 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <!-- custome CDN -->
 <script type ="text/babel" src="./index.js"></script>
+<!-- <script type ="text/babel" src="./slider.js"></script> -->
 </html>
