--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 <!-- babel CDN -->
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 <!-- custome CDN -->
 <script type ="text/babel" src="./index.js"></script>
 <!-- <script type ="text/babel" src="./slider.js"></script> -->
